update screen titles

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.mannguyen.androidtest">
 
     <dist:module dist:instant="true" />
@@ -13,9 +14,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.VolumeDetailActivity"></activity>
-        <activity android:name=".activities.MainActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity
+            android:name=".activities.VolumeDetailActivity"
+            android:label="@string/screen_volume_detail_title" />
+        <activity
+            android:name=".activities.MainActivity"
+            android:label="@string/screen_book_volumes_search_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
