--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    // Card view
+    implementation "androidx.cardview:cardview:1.0.0"
+
     // Recycler view
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
